--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,9 +4,10 @@
   "description": "Backend of the site",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon ./src/app.ts",
+    "dev": "nodemon ./src/app.ts",
+    "test": "jest --detectOpenHandles --forceExit",
+    "lint": "eslint . --ext .ts"
   },
   "author": "Yossi Elgazari",
   "license": "ISC",
@@ -18,6 +19,13 @@
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "@types/express": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   }
 }
