--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -6,7 +6,8 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "./dist",
-    "lib": ["es2015"]
+    "lib": ["es2015"],
+    "skipLibCheck": true,
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*"]
 }
