--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
+    "module": "CommonJS",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "ES6",
     "moduleResolution": "node",
     "sourceMap": true,
     "outDir": "./dist",
     "lib": ["es2015"],
-    "skipLibCheck": true,
+    "skipLibCheck": true
     },
     "include": ["src/**/*"]
 }
