--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,19 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "expo": "^49.0.23",
     "expo-status-bar": "~1.6.0",
+    "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
     "react-native": "0.72.10",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "^18.2.74",
     "@types/react-native": "^0.73.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.4.4"
   },
   "private": true
