--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,13 +12,15 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^49.0.23",
-    "expo-status-bar": "~1.6.0",
+    "axios": "^1.6.8",
+    "expo": "^50.0.14",
+    "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
-    "react-native": "0.72.10",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native": "0.73.6",
+    "react-native-config": "^1.5.1",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
@@ -26,6 +28,7 @@
     "@types/react": "^18.2.74",
     "@types/react-native": "^0.73.0",
     "@types/react-native-vector-icons": "^6.4.18",
+    "react-native-svg-transformer": "^1.3.0",
     "typescript": "^5.4.4"
   },
   "private": true
