--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,29 +2,32 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend of the site",
-  "main": "app.js",
+  "main": "server.ts",
   "scripts": {
-    "start": "nodemon --watch ./src --ext ts --exec ts-node ./src/app.ts",
-    "dev": "nodemon ./src/app.ts",
-    "test": "jest --detectOpenHandles --forceExit",
-    "lint": "eslint . --ext .ts"
+    "test": "tsc && jest --detectOpenHandles --forceExit",
+    "testAuth": "tsc && jest --detectOpenHandles --forceExit ./src/tests/auth.test.ts",
+    "start": "tsc && node dist/server.js",
+    "lint": "eslint . --ext .ts",
+    "dev": "nodemon ./src/server.ts"
   },
   "author": "Yossi Elgazari",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
-    "@types/methods": "^1.1.4",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
