--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -9,5 +9,6 @@
     "lib": ["es2015"],
     "skipLibCheck": true
     },
-    "include": ["src/**/*"]
+    "include": ["src/**/*"],
+    "typeRoots": ["./src/types/express.d.ts", "./node_modules/@types"]
 }
