--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@types/react-native-app-intro-slider": "^4.0.0",
     "axios": "^1.6.8",
-    "expo": "^50.0.14",
+    "expo": "~50.0.15",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-app-intro-slider": "^4.0.4",
     "react-native-config": "^1.5.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
