--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
@@ -17,6 +17,7 @@
     "@types/react-native-app-intro-slider": "^4.0.0",
     "axios": "^1.6.8",
     "expo": "~50.0.15",
+    "expo-checkbox": "~2.7.0",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
