--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.8",
     "expo": "~50.0.15",
     "expo-checkbox": "~2.7.0",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
