--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@types/react-native-app-intro-slider": "^4.0.0",
     "axios": "^1.6.8",
-    "expo": "~50.0.15",
+    "expo": "~50.0.17",
     "expo-checkbox": "~2.7.0",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
@@ -25,6 +25,7 @@
     "react-native": "0.73.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-config": "^1.5.1",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3"
