--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -11,6 +11,7 @@
       "resizeMode": "contain",
       "backgroundColor": "#1292ff"
     },
+    "scheme": "pixelpals",
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -25,6 +26,10 @@
     },
     "web": {
       "favicon": "./assets/PixelPalslogoclear.png"
-    }
+    },
+    "plugins": [
+      "expo-secure-store",
+      "expo-facebook"
+    ]
   }
 }
