--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,15 +17,18 @@
     "@types/react-native-app-intro-slider": "^4.0.0",
     "axios": "^1.6.8",
     "expo": "~50.0.17",
+    "expo-auth-session": "~5.4.0",
     "expo-checkbox": "~2.7.0",
+    "expo-facebook": "^12.2.0",
     "expo-image-picker": "~14.7.1",
+    "expo-random": "~13.6.0",
+    "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-config": "^1.5.1",
-    "react-native-encrypted-storage": "^4.0.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3"
