--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/react-native-action-sheet": "^4.0.1",
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -20,6 +21,7 @@
     "expo-auth-session": "~5.4.0",
     "expo-checkbox": "~2.7.0",
     "expo-image-picker": "~14.7.1",
+    "expo-linear-gradient": "~12.7.2",
     "expo-random": "~13.6.0",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
@@ -28,6 +30,7 @@
     "react-native": "0.73.6",
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-config": "^1.5.1",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-vector-icons": "^10.0.3"
