--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,20 +15,18 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "@types/react-native-app-intro-slider": "^4.0.0",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
+    "expo": "^50.0.17",
     "expo-auth-session": "~5.4.0",
     "expo-checkbox": "~2.7.0",
+    "expo-clipboard": "~5.0.1",
     "expo-image-picker": "~14.7.1",
-    "expo-linear-gradient": "~12.7.2",
     "expo-random": "~13.6.0",
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-app-intro-slider": "^4.0.4",
     "react-native-config": "^1.5.1",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.8.2",
