added Google Sign-In functionality to LoginScreen

--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -25,7 +25,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/PixelPalslogoclearv2.png",
         "backgroundColor": "#121212"
-      }
+      },
+      "package": "com.pixelpalsapp"
     },
     "web": {
       "favicon": "./assets/PixelPalslogoclearv3.png"
