--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "expo-secure-store": "~12.8.1",
     "expo-status-bar": "~1.11.1",
     "expo-vector-icons": "^10.0.1",
+    "form-data": "^4.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-config": "^1.5.1",
